Annoyance prevention for <pre> tags in content
On narrow screens, <pre> blocks could cause the entire page layout to
shrink if the content of the <pre> was wide enough.

In addition to giving the <pre> blocks some padding (room to breathe)
just so they look nicer, telling the browser it can scroll x-axis
overflow prevents the layout breaking as above.

--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,11 @@ header h2 {
     background-color: #D3DEDE;
 }
 
+.content pre {
+    overflow-x: auto;
+    padding: 1em;
+}
+
 .content article a.to-parent {
     float: right;
     margin: 1em 1em 1em 4em;
